--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "liftmetrics",
   "version": "1.0.0",
   "description": "Lift. Track. Improve.",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "test",
-    "local": "nodemon server/server",
-    "start": "NODE_ENV=production node server/server"
+    "server": "nodemon server/server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false NODE_ENV=production npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
     "lift",
