minor styling changes and layout for signup page

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "metric",
     "track",
     "improve",
-    "progress"
+    "progress",
+    "PR",
+    "personal record"
   ],
   "author": "Scott Smith (https://www.linkedin.com/in/scottcsmithdev/)",
   "license": "Commercial",
