--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Lift. Track. PR.",
   "main": "server/server.js",
   "scripts": {
-    "test": "test",
-    "server": "nodemon server/server",
+    "server-dev": "nodemon server/server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false NODE_ENV=production npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server-dev\" \"npm run client\"",
+    "server": "NODE_ENV=production nodemon server/server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
     "lift",
