--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Lift. Track. PR.",
   "main": "server/server.js",
   "scripts": {
-    "server": "node server/server",
+    "server": "nodemon server/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "NODE_ENV=production nodemon server/server",
+    "start": "NODE_ENV=production node server/server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
