--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lift. Track. PR.",
   "main": "server/server.js",
   "scripts": {
-    "server": "nodemon server/server",
+    "server": "NODE_ENV=development nodemon server/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "NODE_ENV=production node server/server",
