--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
+    "lodash": "^4.17.20",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -50,5 +51,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-plugin-lodash": "^3.3.4"
+  }
 }
