--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gravatar": "^1.8.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.11"
+    "mongoose": "^5.11.11",
+    "mongoose-validator": "^2.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
