--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lift. Track. PR.",
   "main": "server/server.js",
   "scripts": {
-    "server": "NODE_ENV=development nodemon server/server",
+    "server": "NODE_ENV=development nodemon server/server --trace-warnings",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "NODE_ENV=production node server/server",
@@ -31,8 +31,8 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
-    "mongoose-validator": "^2.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
