--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "start": "craco start",
