--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gravatar": "^1.8.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "validator": "^13.5.2"
