--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,10 @@
     "@babel/cli": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@types/react-router-dom": "^5.1.9",
-    "babel-plugin-lodash": "^3.3.4"
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.3"
   }
 }
