Updated a few pages to use ts; prep for changing message on about page

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -38,6 +38,8 @@
             "always"
         ],
         "react/react-in-jsx-scope": "off",
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "react/no-unescaped-entities": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
