--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.9",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
